Bug 147999 - Emojis from ODP displaying black on open or poorly during presentation in Windows
Summary: Emojis from ODP displaying black on open or poorly during presentation in Win...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All Windows (All)
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:24.2.0 target:7.6.0.2 target:7...
Keywords:
: 153523 155400 156255 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-03-15 09:28 UTC by ddraiserbl
Modified: 2023-08-22 11:11 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Emotes not displaying properly in presentation (17.76 KB, application/vnd.oasis.opendocument.presentation)
2022-03-16 17:15 UTC, ddraiserbl
Details
Emoji looks good in slide-show (127.33 KB, image/png)
2022-03-17 02:44 UTC, Achmad Fathoni
Details
This is what I see when I enter the presentation. (54.41 KB, image/png)
2022-03-17 09:18 UTC, ddraiserbl
Details
opd file with one emoji (12.83 KB, application/vnd.oasis.opendocument.presentation)
2023-07-08 13:32 UTC, Korrawit Pruegsanusak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ddraiserbl 2022-03-15 09:28:47 UTC
Description:
When I enter presentation mode in LibreOffice Presentation file that contains emotes (mine were large, about 150-300 size), the emojis display squashed, even though the emotes appear normally when outside the presentation.

Steps to Reproduce:
1. Insert emoji into text
2. (Optional) Make emoji large
3. Start presentation from current slide

Actual Results:
The emoji becomes warped.

Expected Results:
The emoji retains its size like the one seen during the editing of the presentation


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.3.2 (x64) / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_CH); UI: en-US
Calc: CL
Comment 1 Xisco Faulí 2022-03-15 09:58:40 UTC Comment hidden (obsolete)
Comment 2 ddraiserbl 2022-03-16 17:15:56 UTC
Created attachment 178920 [details]
Emotes not displaying properly in presentation

Thank you for accepting this bug report! Here is a sample document. Just entering presentation mode in it should make the problem apparent, even though outside of presentation the emotes are shown as normal. It contains no important information.
Comment 3 Achmad Fathoni 2022-03-17 02:44:34 UTC
Created attachment 178929 [details]
Emoji looks good in slide-show
Comment 4 Achmad Fathoni 2022-03-17 02:46:09 UTC
Comment on attachment 178929 [details]
Emoji looks good in slide-show

With LibreOffice 7.3.1.3 in Archlinux
Comment 5 ddraiserbl 2022-03-17 09:18:50 UTC
Created attachment 178931 [details]
This is what I see when I enter the presentation.

That's weird. Here is how the presentation looks on my side. I'm considering to just use images of emotes instead of bothering with making a simpler solution, but that's just because I had major experience in modifying images. I'll wait until someone else experiences this problem; however, I'm willing to cooperate to work on it, if there's any way I can help.
Comment 6 Timur 2022-03-17 11:31:19 UTC
I see this wrong/black already on fileopen with from OO to LO 7.4+ in Windows both GDI and SKIA.
Also no repro in Linux.
So I confirm the bug, which obviously manifests differently. 

Note: I removed Assignee, that's if you will make a fix, please set again if so.
Comment 7 BogdanB 2023-05-21 18:42:57 UTC
Looking good on Linux
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Please retest on Windows to see if it is solved in 7.5.
Comment 8 Khaled Hosny 2023-06-01 13:05:49 UTC
*** Bug 155400 has been marked as a duplicate of this bug. ***
Comment 9 thedeadlysarcasm 2023-06-01 13:24:09 UTC
I got a notification since I was the one who submitted Bug 155400, and I can confirm I can still repro on Windows on the latest Fresh release (7.5.3.2).
Comment 10 BogdanB 2023-06-01 16:28:06 UTC
It seems this it's just a Windows specific bug.
Comment 11 Korrawit Pruegsanusak 2023-07-08 13:32:41 UTC
Created attachment 188265 [details]
opd file with one emoji

Reproducible with the attached file in:
Version: 7.5.2.2 (x86) / LibreOffice Community
Build ID: 53bb9681a964705cf672590721dbc85eb4d0c3a2
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: th-TH (th_TH); UI: en-US
Calc: threaded


Also reproducible with:
Version: 7.6.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: be55b15d98c5f059483845a183fcb5ea8023d27c
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: th-TH (th_TH); UI: en-US
Calc: threaded
Comment 12 Khaled Hosny 2023-07-10 13:38:12 UTC
*** Bug 153523 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2023-07-10 15:58:24 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/199dbff478dacee0b1d65d521e5147ba88c96567

tdf#147999: Fix canvas font width for fallback fonts on Windows

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-07-11 09:41:03 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7e6fa772f181c1e91d55cb25ce58a62ed7348b4d

tdf#147999: Fix canvas font width for fallback fonts on Windows

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-07-11 09:42:07 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2df481312ac949446684a5278a399ec178a89cf2

tdf#147999: Fix canvas font width for fallback fonts on Windows

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Gabor Kelemen (Collabora) 2023-07-12 17:54:53 UTC
*** Bug 156255 has been marked as a duplicate of this bug. ***
Comment 17 thedeadlysarcasm 2023-08-22 11:11:46 UTC
Hey, just for the record: I'd originally reported Bug 155400, a duplicate of this one, and I can confirm this bug is fixed on 7.6.0.

Good job, and thank you :)