tdf#147999: Fix canvas font width for fallback fonts on Windows

For some reason we are getting the wrong font width for fallback fonts, which
results in rendering them squished. This happens only with VCL canvas, but not
with DX one, so it shows when hardware acceleration is disabled (either
explicitly or implicitly when Skia is enabled).

Change-Id: I5a45b1c1d68f4c6e6dd6b43371602af3330a7cd3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154272
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit 199dbff478dacee0b1d65d521e5147ba88c96567)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154255
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>