canvas/source/vcl/textlayout.cxx
@@ -329,6 +329,14 @@ namespace vclcanvas
     {
         SolarMutexGuard aGuard;
 
+#ifdef _WIN32
+        // tdf#147999
+        // On Windows we get the wrong font width for fallback fonts unless we setup again here.
+        vcl::Font aFont(rOutDev.GetFont());
+        tools::setupFontWidth(mpFont->getFontMatrix(), aFont, rOutDev);
+        rOutDev.SetFont(aFont);
+#endif
+
         setupLayoutMode( rOutDev, mnTextDirection );
 
         if( maLogicalAdvancements.hasElements() )
